--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,13 @@
+/.classpath
+/.project
+/Game.class
+/GuessTheNumber$1.class
+/GuessTheNumber.class
+/Player.class
+/README.md
+/action_points.txt
+/delete_classes.sh
+/guess/
 /hangman/
+/main/
+/ticTacToe/
